# Managing-a-family-s-transactions

./: CMakeLists.txt  README.md  main.cpp
Modules/: Entitate.cpp  Entitate.h
OP/: OP.cpp  OP.h
Repo/: EntitateRepository.cpp  EntitateRepository.h
Service/: EntitateService.cpp  EntitateService.h
Tests/: Tests.cpp  Tests.h
UI/: UI.cpp  UI.h
