cmake_minimum_required(VERSION 3.24)
project(lab8)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab8 main.cpp Modules/Entitate.h Modules/Entitate.h Modules/Entitate.h Modules/Entitate.cpp Modules/Entitate.cpp Repo/EntitateRepository.h Repo/EntitateRepository.cpp Service/EntitateService.h Service/EntitateService.cpp UI/UI.h UI/UI.cpp Tests/Tests.h Tests/Tests.cpp OP/OP.h OP/OP.cpp)
